<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
    android:background="#fffff9c4"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:orientation="vertical"
            android:background="#fffff9c4"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="15.0dp"
            android:layout_marginTop="15.0dp"
            android:layout_marginRight="15.0dp"
            android:layout_marginBottom="15.0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:text="@string/Labelapp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15.0dp"
                android:layout_marginBottom="25dp"
                android:textSize="20dp"
                android:gravity="center"/>


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5">

                    <EditText
                        android:id="@+id/namadepan"
                        android:hint="Nama Depan"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5">

                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/namabelakang"
                        android:hint="Nama Belakang"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5">

                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tempatlahir"
                        android:hint="Tempat lahir"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5">

                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/date"
                        android:hint="Tanggal Lahir"
                        android:inputType="none"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_marginTop="15.0dp">

                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="143dp"
                        android:id="@+id/alamat"
                        android:hint="Alamat"
                        android:scrollbars="vertical"
                        android:isScrollContainer="true"
                        android:focusable="true"
                        android:inputType="textMultiLine"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15.0dp"
                android:text="@string/jk"/>

            <RadioGroup
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"

                android:layout_marginTop="15.0dp"
                android:id="@+id/radgrJK">

                <RadioButton
                    android:id="@+id/radbu1"
                    android:text="Laki-Laki"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"/>

                <RadioButton
                    android:id="@+id/radbu2"
                    android:text="Perempuan"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"/>
            </RadioGroup>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/agm"/>

            <RadioGroup
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:id="@+id/radgr1">
                    <RadioButton
                        android:layout_width="0.0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/radbu3"
                        android:text="Islam"
                        android:layout_weight="0.5"
                        android:onClick="ButtonClick"
                        android:checked="false"/>

                    <RadioButton
                        android:layout_width="0.0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/radbu4"
                        android:text="Kristen"
                        android:layout_weight="0.5"
                        android:onClick="ButtonClick"
                        android:checked="false"/>
            </RadioGroup>

            <RadioGroup
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/radgr2">

                    <RadioButton
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/radbu5"
                        android:text="Katholik"
                        android:layout_weight="0.5"
                        android:onClick="ButtonClick"
                        android:checked="false"/>

                    <RadioButton
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/radbu6"
                        android:text="Hindu"
                        android:layout_weight="0.5"
                        android:onClick="ButtonClick"
                        android:checked="false"/>
            </RadioGroup>

            <RadioGroup
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/radgr3">


                    <RadioButton
                        android:layout_width="0.0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/radbu7"
                        android:text="Budha"
                        android:layout_weight="0.5"
                        android:onClick="ButtonClick"
                        android:checked="false"/>

                    <RadioButton
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/radbu8"
                        android:text="Konghucu"
                        android:layout_weight="0.5"
                        android:onClick="ButtonClick"
                        android:checked="false"/>
            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15.0dp"
                android:layout_weight="0.5">

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="Telephone"
                    android:id="@+id/telephon"
                    android:inputType="phone"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15.0dp"
                android:layout_weight="0.5">

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="Email"
                    android:id="@+id/email"
                    android:inputType="textEmailAddress"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_weight="0.5"
                app:passwordToggleEnabled="true">

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="Password"
                    android:id="@+id/password"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15.0dp"
                android:layout_weight="0.5"
                app:passwordToggleEnabled="true">

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="Masukan Password Kembali"
                    android:id="@+id/repassword"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15.0dp"
                android:layout_marginBottom="30dp">

                <Button
                    android:id="@+id/Kembali"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:text="@string/kmbl"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.26"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.979" />

                <Button
                    android:id="@+id/Daftar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:text="@string/dft"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.86"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.979" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>